k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gke-hello-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gke-hello-app
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
